Fix overflow issue on body and reset header events.

--- a/resources/assets/styles/layouts/_pages.scss
+++ b/resources/assets/styles/layouts/_pages.scss
@@ -13,6 +13,7 @@
     position: relative;
     z-index: 1;
     margin-bottom: $golden-ratio-5;
+    overflow: scroll;
 
     @include standard-body-link();
 
